# inox2d

./: Cargo.toml  README.md  run_example.sh
examples/render-bevy/: Cargo.toml
examples/render-bevy/src/: main.rs
examples/render-opengl/src/: main.rs
examples/render-wgpu/: Cargo.toml
examples/render-wgpu/src/: main.rs
inox2d-bevy/: Cargo.toml
inox2d-bevy/src/: lib.rs
inox2d-opengl/src/: lib.rs
inox2d-wgpu/: Cargo.toml
inox2d-wgpu/src/: headless.rs  lib.rs  shaders.rs
inox2d-wgpu/src/shaders/: debug.wgsl  fragment.wgsl  mask.wgsl  vertex.wgsl
inox2d/src/: params.rs  render.rs
inox2d/src/formats/: payload.rs
