[package]
name = "inox2d-bevy"
version = "0.1.0"
edition = "2021"
description = "Bevy plugin for Inox2D"

[dependencies]
bevy = { version = "0.16", default-features = false, features = ["bevy_asset","bevy_winit","bevy_render","x11"] }
thiserror = "1"
# used for synchronous block_on during loading
futures-lite = "2.6"
# Use path to inox2d
inox2d = { path = "../inox2d" }
inox2d-wgpu = { path = "../inox2d-wgpu" }

[dependencies.glam]
version = "0.29"
features = ["serde"]
