[package]
name = "inox2d-wgpu"
version = "0.1.0"
edition = "2021"
description = "WGPU renderer for Inox2D"

[dependencies]
wgpu = "24"
thiserror = "2"
bytemuck = { version = "1.23", features = ["derive"] }
tracing = "0.1.41"
include-wgsl-oil = "0.2.9"
winit = { version = "0.29", optional = true }

inox2d = { path = "../inox2d" }

[dependencies.glam]
version = "0.29"
features = ["serde"]

[dev-dependencies]
pollster = "0.4"
image = "0.25"
json = "0.12"
futures = "0.3"

[features]
headless = ["winit"]
