[package]
name = "render-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
inox2d = { path = "../../inox2d" }
inox2d-wgpu = { path = "../../inox2d-wgpu" }

clap = { version = "4.5", features = ["derive", "env"] }
wgpu = "24"
winit = { version = "0.29", features = ["rwh_05"] }
glam = { version = "0.29.0", features = ["bytemuck"] }
pollster = "0.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
